fix: fix card button misalignment in small device 2

--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -10,7 +10,7 @@ header {
   width: 100%;
   padding: 0;
   display: flex;
-  padding: 0.5em 0.5em 0.5em 1em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
   align-items: center;
 }
 
